[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleSLACalc"
version = "0.0.6"
authors = [
  { name="Kenny Sambrook", email="kenny@krstek.com" },
  { name="Kaan Arslan", email="kaan.arslan@deltics.nl" },
]
description = "A simple SLA Calculator"  # This is static, so remove it from dynamic

dynamic = ["readme", "requires-python", "license", "classifiers", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/exodusprime1337/SimpleSLACalc"
"Bug Tracker" = "https://github.com/exodusprime1337/SimpleSLACalc/issues"
